--- a/nd project/natedao/package.json
+++ b/nd project/natedao/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "electron-squirrel-startup": "^1.0.0",
-    "firebase": "^9.20.0"
+    "firebase": "^9.20.0",
+    "firebaseui": "^6.0.2"
   }
 }
